src/CodeParser.java
/* Generated By:JavaCC: Do not edit this line. CodeParser.java */
import java.util.ArrayList;
public class CodeParser implements CodeParserConstants {
  static ArrayList <Exception > Excep = new ArrayList <Exception >();
  static ArrayList <variableNode> VIP = new ArrayList<variableNode>();
  public static void main(String args[])
  {
       CodeParser Parser = new CodeParser(System.in);
       try {
               program();
       }
       catch(ParseException e)
       {
                        System.out.println("Main : "+e);
           }
           for (int i=0;i<Excep.size();i++)
           {
                        System.out.println("ERROR "+(i+1)+" : "+Excep.get(i));
           }
  }

  static final public void program() throws ParseException {
  Node n =null;
  programNode ret = new programNode() ;
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
        case LINE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LINE:
          jj_consume_token(LINE);
          break;
        case SPACE:
          jj_consume_token(SPACE);
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      label_2:
      while (true) {
        try {
          n = statement(ret);
          label_3:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case SPACE:
              ;
              break;
            default:
              jj_la1[2] = jj_gen;
              break label_3;
            }
            jj_consume_token(SPACE);
          }
          jj_consume_token(LINE);
                if (n!=null)
                        ret.addChild(n);
        } catch (ParseException e) {
                        Excep.add(e);
                        do
                        {

                        }while(CodeParserTokenManager.getNextToken().image != "\u005cn");
        }
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
          case LINE:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_4;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LINE:
            jj_consume_token(LINE);
            break;
          case SPACE:
            jj_consume_token(SPACE);
            break;
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case DO:
        case END:
        case FOR:
        case INPUT:
        case PRINT:
        case ID:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_2;
        }
      }
      jj_consume_token(50);
             ret.Start();
    } catch (ParseException e) {

    }
  }

  static final public Node statement(programNode x) throws ParseException {
  Node n =null;
  statementNode ret = new statementNode(x) ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRINT:
      n = print(x);
      break;
    case ID:
      n = variable_assignment(x);
      break;
    case INPUT:
      n = input(x);
      break;
    case IF:
      n = if_st(x);
      break;
    case END:
      n = end(x);
      break;
    case FOR:
      n = for_st(x);
      break;
    case DO:
      n = while_st(x);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
            if (n!=null)
                ret.addChild(n);
            {if (true) return ret ;}
    throw new Error("Missing return statement in function");
  }

  static final public Node end(programNode x) throws ParseException {
    jj_consume_token(END);
    {if (true) return new endNode(x) ;}
    throw new Error("Missing return statement in function");
  }

  static final public Node print(programNode x) throws ParseException {
  Node n = null ;
  printNode ret = new printNode(x) ;
    jj_consume_token(PRINT);
    label_5:
    while (true) {
      jj_consume_token(SPACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
    }
    n = value(x);
                                   ret.addChild(n);
    label_6:
    while (true) {
      if (jj_2_1(2147483647)) {
        ;
      } else {
        break label_6;
      }
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        jj_consume_token(SPACE);
      }
      jj_consume_token(SEMI);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_8;
        }
        jj_consume_token(SPACE);
      }
      n = value(x);
                                                                                                                                    ret.addChild(n);
    }
    {if (true) return ret ;}
    throw new Error("Missing return statement in function");
  }

  static final public Node string(programNode x) throws ParseException {
  Token t;
    t = jj_consume_token(STRING);
    stringNode ret = new stringNode(t.image , x) ;
    {if (true) return ret ;}
    throw new Error("Missing return statement in function");
  }

  static final public Node variable(programNode z) throws ParseException {
  Token t1 = null , t2 = null;
    t1 = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case qMARK:
    case dMARK:
    case andMARK:
    case hashMARK:
    case PERCENT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case qMARK:
        t2 = jj_consume_token(qMARK);
        break;
      case dMARK:
        t2 = jj_consume_token(dMARK);
        break;
      case PERCENT:
        t2 = jj_consume_token(PERCENT);
        break;
      case hashMARK:
        t2 = jj_consume_token(hashMARK);
        break;
      case andMARK:
        t2 = jj_consume_token(andMARK);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
     String x = "" , y ;
     if(t2 != null) {
       x = t2.image ;
       y = t1.image + t2.image ;
     }
     else {
       y = t1.image ;
     }

     for(int i=0 ; i<VIP.size() ; i++) {
                        if(VIP.get(i).getID().equals(y)) {
                                {if (true) return VIP.get(i) ;}
                }
         }


     variableNode ret = new variableNode(y , x , z) ;
     VIP.add(ret) ;
     {if (true) return ret ;}
    throw new Error("Missing return statement in function");
  }

  static final public Node value(programNode x) throws ParseException {
  Node n1 = null ;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case CONSTANT:
    case LP:
    case SIN:
    case COS:
    case SQRT:
    case ABS:
    case ID:
      n1 = E(x);
      break;
    case STRING:
      n1 = string_concatenation(x);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return n1 ;}
    throw new Error("Missing return statement in function");
  }

  static final public Node string_concatenation(programNode x) throws ParseException {
  Node n1 = null ;
  string_concatenationNode ret = new string_concatenationNode(x);
    n1 = string(x);
                  ret.addChild(n1);
    label_9:
    while (true) {
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_9;
      }
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_10;
        }
        jj_consume_token(SPACE);
      }
      jj_consume_token(PLUS);
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_11;
        }
        jj_consume_token(SPACE);
      }
      n1 = string(x);
                                                                                                                      ret.addChild(n1);
    }
    {if (true) return ret ;}
    throw new Error("Missing return statement in function");
  }

  static final public Node variable_assignment(programNode x) throws ParseException {
  Node n1 = null , n2 = null ;

    variable_assignmentNode ret = new variable_assignmentNode(x) ;
    n1 = variable(x);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_12;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(ASSIGN);
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_13;
      }
      jj_consume_token(SPACE);
    }
    n2 = value(x);
    ret.addChild(n1);
    ret.addChild(n2);
    {if (true) return ret ;}
    throw new Error("Missing return statement in function");
  }

  static final public Node input(programNode x) throws ParseException {
  Node n = null ;
  Node n2=null;

   inputNode ret = new inputNode(x) ;
    jj_consume_token(INPUT);
    jj_consume_token(SPACE);
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_14;
      }
      jj_consume_token(SPACE);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      n2 = string(x);
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_15;
        }
        jj_consume_token(SPACE);
      }
      jj_consume_token(SEMI);
      label_16:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[19] = jj_gen;
          break label_16;
        }
        jj_consume_token(SPACE);
      }
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
    n = variable(x);
    ret.addChild(n);
    if (n2!=null)
        ret.addChild(n2);
    {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  static final public Node if_st(programNode x) throws ParseException {
  Node n1 = null , n2 = null ;
  ifNode ret = new ifNode(x) ;
    jj_consume_token(IF);
    jj_consume_token(SPACE);
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_17;
      }
      jj_consume_token(SPACE);
    }
    n1 = condition(x);
                                               ret.addChild(n1);
    jj_consume_token(SPACE);
    label_18:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_18;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(THEN);
    label_19:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_19;
      }
      jj_consume_token(SPACE);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case DO:
    case END:
    case FOR:
    case INPUT:
    case PRINT:
    case ID:
      n2 = statement(x);
                                    ret.addChild(n2);
      label_20:
      while (true) {
        if (jj_2_3(2147483647)) {
          ;
        } else {
          break label_20;
        }
        label_21:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            ;
            break;
          default:
            jj_la1[24] = jj_gen;
            break label_21;
          }
          jj_consume_token(SPACE);
        }
        jj_consume_token(TWODOTS);
        label_22:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            ;
            break;
          default:
            jj_la1[25] = jj_gen;
            break label_22;
          }
          jj_consume_token(SPACE);
        }
        n2 = statement(x);
                                                                                                             ret.addChild(n2);
      }
      if (jj_2_4(2147483647)) {
        label_23:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            ;
            break;
          default:
            jj_la1[26] = jj_gen;
            break label_23;
          }
          jj_consume_token(SPACE);
        }
        n2 = else_st_one_line(x);
                                                                                       ret.addChild(n2);
      } else {
        ;
      }
      break;
    case LINE:
      jj_consume_token(LINE);
      label_24:
      while (true) {
        label_25:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
          case LINE:
            ;
            break;
          default:
            jj_la1[27] = jj_gen;
            break label_25;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            jj_consume_token(SPACE);
            break;
          case LINE:
            jj_consume_token(LINE);
            break;
          default:
            jj_la1[28] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        n2 = statement(x);
        label_26:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            ;
            break;
          default:
            jj_la1[29] = jj_gen;
            break label_26;
          }
          jj_consume_token(SPACE);
        }
        jj_consume_token(LINE);
                                                                                                                                                                   ret.addChild(n2);
        if (jj_2_5(2147483647)) {
          ;
        } else {
          break label_24;
        }
      }
      label_27:
      while (true) {
        if (jj_2_6(2147483647)) {
          ;
        } else {
          break label_27;
        }
        label_28:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
          case LINE:
            ;
            break;
          default:
            jj_la1[30] = jj_gen;
            break label_28;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            jj_consume_token(SPACE);
            break;
          case LINE:
            jj_consume_token(LINE);
            break;
          default:
            jj_la1[31] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        n2 = elseif_st(x);
                                                                                           ret.addChild(n2);
      }
      if (jj_2_7(2147483647)) {
        label_29:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
          case LINE:
            ;
            break;
          default:
            jj_la1[32] = jj_gen;
            break label_29;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SPACE:
            jj_consume_token(SPACE);
            break;
          case LINE:
            jj_consume_token(LINE);
            break;
          default:
            jj_la1[33] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        n2 = else_st(x);
                                                                                       ret.addChild(n2);
      } else {
        ;
      }
      label_30:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
        case LINE:
          ;
          break;
        default:
          jj_la1[34] = jj_gen;
          break label_30;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          jj_consume_token(SPACE);
          break;
        case LINE:
          jj_consume_token(LINE);
          break;
        default:
          jj_la1[35] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(ENDIF);
      break;
    default:
      jj_la1[36] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return ret ;}
    throw new Error("Missing return statement in function");
  }

  static final public Node elseif_st(programNode x) throws ParseException {
  Node n1 = null , n2 = null ;
  elseifNode ret = new elseifNode(x) ;
    jj_consume_token(ELSEIF);
    jj_consume_token(SPACE);
    label_31:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[37] = jj_gen;
        break label_31;
      }
      jj_consume_token(SPACE);
    }
    n1 = condition(x);
                                                  ret.addChild(n1);
    jj_consume_token(SPACE);
    label_32:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[38] = jj_gen;
        break label_32;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(THEN);
    label_33:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[39] = jj_gen;
        break label_33;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(LINE);
    label_34:
    while (true) {
      label_35:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
        case LINE:
          ;
          break;
        default:
          jj_la1[40] = jj_gen;
          break label_35;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          jj_consume_token(SPACE);
          break;
        case LINE:
          jj_consume_token(LINE);
          break;
        default:
